--- a/chat-tcp-fx/src/main/resources/com/example/chattcpfx/chat-tcp-fx.fxml
+++ b/chat-tcp-fx/src/main/resources/com/example/chattcpfx/chat-tcp-fx.fxml
@@ -6,15 +6,15 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="383.0" prefWidth="509.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.2" fx:controller="com.example.chattcpfx.HelloController">
+<VBox alignment="CENTER" prefHeight="383.0" prefWidth="509.0" spacing="20.0" xmlns="http://javafx.com/javafx/20.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chattcpfx.EventHandler">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <Label text="host" />
-   <TextField />
+   <TextField fx:id="hostField" />
    <Label text="port" />
-   <TextField />
+   <TextField fx:id="portField" />
    <Label text="login" />
-   <TextField />
-   <Button mnemonicParsing="false" text="connect" />
+   <TextField fx:id="loginField" />
+   <Button mnemonicParsing="false" onAction="#handle" text="connect" />
 </VBox>
