--- a/chat-tcp-fx/src/main/resources/com/example/chattcpfx/chat-tcp-fx.fxml
+++ b/chat-tcp-fx/src/main/resources/com/example/chattcpfx/chat-tcp-fx.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="383.0" prefWidth="509.0" spacing="20.0" xmlns="http://javafx.com/javafx/20.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chattcpfx.EventHandler">
+<VBox alignment="CENTER" prefHeight="383.0" prefWidth="509.0" spacing="20.0" xmlns="http://javafx.com/javafx/20.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chattcpfx.ConnectButtonEventHandler">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
